conanio/styles/stylev2.css
/* ... */
.hero-bg, .contact-bg {
  max-width: 300px;
}

body#hero h1, body#heroFaq h1 {
  font-style: normal;
  font-weight: 700;
  font-size: 45px;
  line-height: 56px;
}
body#hero h2, body#heroFaq h2 {
  font-style: normal;
  font-weight: 400;
  font-size: 17px;
  line-height: 159.68%;
}

section#faqQuestions {
  background: linear-gradient(0deg, rgba(216, 240, 255, 0) 0%, rgba(232, 246, 255, 0.14) 29.69%, #FBFDFF 100%);
}

.hero-bg {
  top: 422px;
  left: 0;
}
.hero-bg.downloads-hero-bg {
  top: 150px;
}
@media screen and (max-width: 480px) {
  .hero-bg .homepage-hero-paragraph {
    font-size: 1rem;
  }
}

.artifactory-buttons {
  gap: 5px;
}

section#why {
  background: linear-gradient(180deg, rgba(216, 240, 255, 0) 0%, rgba(232, 246, 255, 0.7) 29.69%, #FFFFFF 100%);
}

section#hero, section#heroFaq {
  background: linear-gradient(180deg, rgba(216, 240, 255, 0) 0%, rgba(232, 246, 255, 0.14) 29.69%, #FBFDFF 90.16%);
}
section#hero .hero-content, section#heroFaq .hero-content {
  margin-left: auto;
  margin-right: auto;
}
section#hero .hero-content h2, section#heroFaq .hero-content h2 {
  font-size: 17px;
  font-weight: 400;
  line-height: 27px;
  /* 20/18 */
}
@media screen and (max-width: 480px) {
  section#hero .hero-content h2, section#heroFaq .hero-content h2 {
    font-size: 1rem;
  }
}

.faq-questions .container {
  border-bottom: 1px solid #E6E6E6;
}
@media screen and (max-width: 480px) {
  .faq-questions .container {
    border-bottom: 0;
  }
}
.faq-questions li.faq-anchor {
  list-style: none;
  padding-bottom: 15px;
  padding-right: 15px;
}
.faq-questions li.faq-anchor a {
  color: #3a74ae;
}

section.advantages .advantage {
  margin-left: auto;
  margin-right: auto;
  background: white;
}
section.advantages .advantage .img {
  min-height: 101px;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  align-items: center;
  justify-content: center;
}
section.advantages .advantage h4 {
  margin-top: 10%;
  margin-right: 10%;
  margin-left: 10%;
}
section.advantages .advantage p {
  margin-top: 10%;
  margin-right: 10%;
  margin-left: 10%;
  font-size: 0.88rem;
  font-weight: 400;
  line-height: 23.95px;
  /* 15/18 */
}
section.advantages .advantage p strong {
  font-weight: 700;
}
section.advantages .advantage .read-more-wrapper .read-more-content {
  display: none;
}
section.advantages .advantage .read-more span {
  display: inline-block;
  position: relative;
  left: 3px;
  top: 2px;
  transform: rotate(90deg);
}
section.advantages .advantage .read-more:hover {
  color: #fff;
}

section.places {
  background: linear-gradient(180deg, #D5EFFF 0%, rgba(235, 247, 255, 0) 100%);
}
section.places p {
  font-weight: 400;
  font-size: 0.888rem;
  line-height: 23.95px;
}

.home-tribe {
  background: #D3EDFF;
}
@media screen and (max-width: 768px) {
  .home-tribe {
    background-size: 1920px 100%;
  }
}
.home-tribe p {
  font-weight: 400;
  font-size: 1.11rem;
  max-width: 100%;
}

.header-bg {
  background: linear-gradient(180deg, #D5EFFF 0%, rgba(235, 247, 255, 0) 100%);
  width: 100%;
  z-index: -2;
}

.conan-card {
  height: 100%;
  border-top: 9px solid #1FACFF;
  box-shadow: 0px 9px 29px rgba(0, 0, 0, 0.07), 0px 1.12694px 3.63125px rgba(0, 0, 0, 0.035);
}

.conan-card-white {
  height: 100%;
  border-top: 9px solid #FFFFFF;
  box-shadow: 0px 9px 29px rgba(0, 0, 0, 0.07), 0px 1.12694px 3.63125px rgba(0, 0, 0, 0.035);
}

.customer-success {
  background: linear-gradient(183.92deg, #FFFFFF 3.21%, #CBEBFF 113.24%, #A9DCFC 158.55%);
}
.customer-success .success-stories h5 {
  font-size: 18px;
  line-height: 139%;
}
.customer-success .success-stories p.text {
  font-family: "Open Sans", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 139%;
}

.users-voice-bg {
  background: linear-gradient(0deg, #D5EFFF 0%, rgba(235, 247, 255, 0) 100%);
}

section.testis {
  overflow: hidden;
}
section.testis h2 {
  font-weight: 300;
}
section.testis p.text {
  font-family: "Open Sans", sans-serif;
  font-weight: 400;
}
section.testis .testi-cartousel-wrapper {
  position: relative;
  max-width: 646px;
  margin-left: auto;
  margin-right: auto;
}
section.testis .testi-cartousel-wrapper .testi {
  font-weight: 300;
}
section.testis .testi-cartousel-wrapper .testi .quote span.line {
  background: #fff;
  height: 1px;
  width: 95px;
}
section.testis .testi-cartousel-wrapper .slick-track {
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  align-items: center;
}
section.testis .testi-cartousel-wrapper .cs-slick-nav {
  position: absolute;
  background-color: transparent;
  border: 0;
  margin-top: auto;
  margin-bottom: auto;
  top: 0;
  bottom: 0;
  outline: 0 !important;
}
section.testis .testi-cartousel-wrapper .cs-slick-nav.cs-slick-right {
  transform: rotate(180deg);
  right: -80px;
}
section.testis .testi-cartousel-wrapper .cs-slick-nav.cs-slick-left {
  left: -80px;
}
section.testis .company-logo img {
  width: 100px;
  height: 100%;
  object-fit: contain;
  object-position: 50% 50%;
}
section.testis .company-logo.logo-squared img {
  width: 50px !important;
}
section.testis .company-quote {
  width: 70%;
}

footer#siteFooter {
  background-color: #0C0C0C;
  background-size: 24vw;
  margin-top: auto;
}
@media screen and (max-width: 991px) {
  footer#siteFooter {
    background-image: none;
  }
}
footer#siteFooter .footer-left {
  border-top: 1px solid rgba(139, 139, 139, 0.5);
  padding-top: 30px;
  margin-top: 20px;
}
footer#siteFooter .footer-left .footer-menu {
  font-size: 15px;
}
footer#siteFooter .footer-left .footer-menu h4 {
  font-size: 16px;
}
footer#siteFooter .footer-left .footer-menu ul {
  list-style: none;
  padding: 0;
  margin-bottom: 0;
}
footer#siteFooter .footer-left .footer-menu ul li a {
  color: #000;
  transition: all 0.32s ease;
  font-weight: 400;
}
footer#siteFooter .footer-left .footer-menu ul li a:hover {
  color: #2c4257;
}
footer#siteFooter ul.socials a {
  transition: all 0.32s ease;
}
/* ... */

